# arv-anshul.github.io

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  .yamllint.yaml  404.html  Justfile  Makefile  README.md  astro.config.mjs  biome.jsonc  dprint.json  index.html  mkdocs.yaml  package.json  pyproject.toml  requirements.txt  sitemap.xml  starwind.config.json  tsconfig.json
.github/workflows/: build_docs.yaml  deploy.yaml
.zed/: settings.json
about/: index.html
anime/: index.html
blog/: index.html
blog/bash-tips/: index.html
blog/bash-useful-commands/: index.html
blog/basics-of-statistics/: index.html
blog/clustering-algo/: index.html
blog/docker-fastapi-uv/: index.html
blog/finetune-transformers/: index.html
blog/how-to-eda/: index.html
blog/hypothesis-testing-introduction/: index.html
blog/intro-to-deep-learning/: index.html
blog/job-applying-agent/: index.html
blog/learn-docker/: index.html
blog/learn-fastapi/: index.html
blog/learn-stuff/: index.html
blog/learn-web-scraping/: index.html
blog/ml-systems-dobuts/: index.html
blog/outlier-univariate/: index.html
blog/overview-decision-tree/: index.html
blog/redirect-search-engine/: index.html
blog/regression-interview-questions/: index.html
blog/regularization-in-ml/: index.html
blog/resume-tips/: index.html
blog/starship-prompt/: index.html
blog/tree-vs-regression-models/: index.html
campusx-dsmp/: index.html
campusx-dsmp/resources/: index.html
content/projects/: campusx.md  canvas-ai.md  credit-risk-modeling.md  spotify-analysis.md
data/: all_projects.yaml  friends.yaml  info.yaml  projects.yaml  simpleicons.json
data/render_yaml/: about.yaml  friends.yaml  learn_stuff.yaml  other_projects.yaml  projects_index.yaml  recommendations.yaml
docs/: about.md  achievements.md  anime.md  friends.md  index.md  movies-and-shows.md  music.md  resume.md
docs/.overrides/: main.html
docs_src/: generate_simpleicons_css.py
friends/: index.html
gh/: index.html
github/: index.html
hooks/: generate_simpleicons_css.py  prettify_simpleicons_json.py
linkedin/: index.html
movies/: index.html
movies-and-shows/: index.html
music/: index.html
notebooks/: index.html
project/: index.html
projects/: index.html
ref/: index.html
resume/: index.html
schema/: other_projects.json
schemas/: friends-schema.json  other_projects-schema.json  projects_index-schema.json
scripts/: generate_simpleicons_css.py  new-content.ts
search/: search_index.json
src/: content.config.ts
stylesheets/: extra.css  simpleicons.css
(+319 files in other folders)
