[project]
name = "arv-anshul-github-io"
version = "0.1.0"
description = "Portfolio, blogs, recommendations, resources and more on my personal website."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gamail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "mkdocs-material==9.5.31",
    "mkdocs-macros-plugin==1.0.5",
    "mkdocs-redirects==1.2.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PTH",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TCH",
    "UP",
    "W",
    "YTT",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "INP001",
    "ISC001",
    "N818",
    "PGH003",
    "S101",
    "S301",
    "UP035",
]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
